Revert "update footer UI"

--- a/CapEAT/UI_CapEat/src/app/charity/charity.component.html
+++ b/CapEAT/UI_CapEat/src/app/charity/charity.component.html
@@ -1,49 +1,28 @@
 <html>
+  <head>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+  <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet"/>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+  </head>
+  <body style="background-color: #7395AE">
+      <div class="container-fluid">
+            <div class="main-menu-pages"></div>
+            <br>
 
-<head>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" />
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-</head>
+  <h1 class="chefHeader">Do Good Have Good</h1>
+  <h4 class="subheader">Our website support few Charity organization. </h4>
+  
+  
+  <a href="https://feedmore.org/">
+      <img src="././assets/images/feedmore.jpg" id="FeedMore" class="image pic">
+      </a>
 
-<body style="background-color: #7395AE">
-    <div class="container-fluid">
-        <div class="main-menu-pages"></div>
-        <br>
+      
+  <br>
+  <br>
+  <br>
+  </div>
+  
+  </body>
+  </html>
 
-        <h1 class="chefHeader">Do Good Have Good</h1>
-        <h4 class="subheader">Our website support few Charity organization. </h4>
-        <br>
-        <h5 class="subheader">FeedMore’s comprehensive hunger-relief programs reach far and wide for our neighbors that struggle with hunger. From
-            rural areas to the suburban communities to urban localities, we are dedicated to extending a helping hand to
-            the nearly 200,000 food-insecure children, families and seniors in our service area.</h5>
-
-        <!-- <a href="https://feedmore.org/">
-            <img src="././assets/images/feedmore.jpg" id="FeedMore" class="image pic">
-        </a> -->
-        <br>
-        <h5 class="subheader">Our Meals on Wheels provides made-from-scratch, nutritious meals to homebound seniors in 14 localities including
-            the cities of Richmond, Petersburg, Hopewell and Colonial Heights, as well as the counties of Charles City, Chesterfield,
-            Dinwiddie, Goochland, Hanover, Henrico, Louisa, New Kent, Powhatan and Prince George. FeedMore’s Central Virginia
-            Food Bank and Partner Agency Network serves 34 counties and cities – nearly one-third of the state – from the
-            Northern Neck to Louisa County and south to the North Carolina border.</h5>
-        <br>
-        <h5 class="subheader">Food donations make up a critical foundation of our feeding efforts. To help ensure that food is available when and
-            where it is most needed, FeedMore must obtain as much food as possible at little to no cost. This takes the contributions
-            of individuals, groups and food industry donors, who host food drives, provide food in local drop boxes, and
-            donate products for distribution.</h5>
-        <br>
-        <br>
-        <a class="btn btn-primary btn-sm" href="https://secure3.convio.net/feed/site/Donation2?df_id=4121&mfc_pref=T&4121.donation=form1"
-            role="button">Donate</a>
-
-        <a class="btn btn-primary btn-sm" href="https://feedmore.org/" role="button">More info</a>
-
-
-        <br>
-        <br>
-    </div>
-
-</body>
-
-</html>
