--- a/CapEAT/UI_CapEat/src/app/about/about.component.html
+++ b/CapEAT/UI_CapEat/src/app/about/about.component.html
@@ -1,6 +1,5 @@
 <!-- Jagatha -->
 <html>
-        <div class="container-fluid">
 <div class="col-sm-6 col-md-4 col-lg-3 mt-4">
     <div class="main-menu-pages"></div>
     <div class="card">
@@ -111,7 +110,7 @@
 </div>
 
 <!-- Uday -->
-<!-- <div class="col-sm-6 col-md-4 col-lg-3 mt-4">
+<div class="col-sm-6 col-md-4 col-lg-3 mt-4">
 
     <div class="main-menu-pages"></div>
     <div class="card">
@@ -134,8 +133,8 @@
             <small>Last updated 3 mins ago</small>
             <button class="btn btn-secondary float-right btn-sm">Follow</button>
         </div>
-    </div> -->
-
-<!-- </div> -->
+    </div>
+<br>
 </div>
+
 </html>
