--- a/CapEAT/UI_CapEat/src/app/charity/charity.component.css
+++ b/CapEAT/UI_CapEat/src/app/charity/charity.component.css
@@ -1,4 +1,10 @@
 
+
+.img_class {
+    width:260px;
+    height:250px;
+}
+
 .chefHeader {
     text-align: center;
     color: white;
@@ -12,12 +18,11 @@
    
 }
 
-
 .body {
     background-color: #7395AE;
 }
 
-.image {
+#breakfastMenu {
     margin: auto;
     display: block;
     width: 400px;
@@ -25,9 +30,17 @@
     height: auto;
 }
 
-.container-fluid {
+#lunchMenu {
+    margin: auto;
+    display: block;
+    width: 400px;
+    max-width: 100%;
+    height: auto;
+}
+
+.container {
     width: 750px;
-    height: 700px;
+    height: 600px;
    
 
  }
@@ -41,37 +54,4 @@
     width: 350px;
     margin-left: 540px;
     margin-top: 50px;
- }
-
-
-.btn btn-primary btn-sm {
-    text-align: center;
-}
- .container {
-     text-align: center;
-     margin-top: 50px;
-     
- }
-
- .btn {
-     width: 180px;
-     height: 50px;
-     margin: 0 auto;
-     padding: 0;
-     display: inline-block;
-     line-height: 50px;
-     text-align: center;
-     font-size: 13px;
-     margin-left: 131px;
- }
-
- .separator {
-    display:block;
-    border:none;
-    color: #557A95;
-    height:1px;
-    background: #3b5466;
-    background: -webkit-gradient(radial, 50% 50%, 0, 50% 50%, 350, from(#3b5466), to(#557A95));
-    
-     
  }
