--- a/CapEAT/UI_CapEat/src/app/nav/nav.component.html
+++ b/CapEAT/UI_CapEat/src/app/nav/nav.component.html
@@ -1,155 +1,65 @@
 <nav class="navbar navbar-expand-md">
   <img class="image header-image" src='././assets/images/capEATlogo3.png'>
 
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample04" aria-controls="navbarsExample04"
-    aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
+<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample04" aria-controls="navbarsExample04"
+  aria-expanded="false" aria-label="Toggle navigation">
+  <span class="navbar-toggler-icon"></span>
+</button>
 
-  <div class="collapse navbar-collapse" id="navbarsExample04">
-    <ul class="navbar-nav mr-auto">
-      <li class="nav-item active">
-        <a class="nav-link" id="text-blue" href="#"> Home
-          <span class="sr-only">(current)</span>
-        </a> |
+<div class="collapse navbar-collapse" id="navbarsExample04">
+  <ul class="navbar-nav mr-auto">
+    <li class="nav-item active">
+      <a class="nav-link" id="text-blue" href="#">    Home 
+        <span class="sr-only">(current)</span>
+      </a> |
+    
+    </li>
+    
+    <li class="nav-item">
+      <a class="nav-link" id="text-blue" href="#/nutrition">Nutrition Info  </a> |
+    </li>
+    
+    <li class="nav-item">
+      <a class="nav-link" id="text-blue" href="#/maps">Cafeteria Maps  </a> |
+    </li>
+    
+    <li class="nav-item">
+      <a class="nav-link" id="text-blue" href="#/special">Specials  </a> |
+    </li>
+    
+    <li class="nav-item">
+      <a class="nav-link" id="text-blue" href="#/catering">Chef's Table  </a> |
+    </li>
 
-      </li>
+    <li class="nav-item">
+      <a class="nav-link" id="text-blue" href="#/history">Order History </a> |
+    </li>
 
-      <li class="nav-item">
-        <a class="nav-link" id="text-blue" href="#/nutrition">Nutrition Info </a> |
-      </li>
-
-      <li class="nav-item">
-        <a class="nav-link" id="text-blue" href="#/maps">Cafeteria Maps </a> |
-      </li>
-
-      <li class="nav-item">
-        <a class="nav-link" id="text-blue" href="#/special">Specials </a> |
-      </li>
-
-      <li class="nav-item">
-        <a class="nav-link" id="text-blue" href="#/catering">Chef's Table </a> |
-      </li>
-
-      <li class="nav-item">
-        <a class="nav-link" id="text-blue" href="#/history">Order History </a> |
-      </li>
+    <!-- <li ngbDropdown class="d-inline-block">
+        <a class="nav-link dropdown-toggle" id="text-blue" ngbDropdownToggle>Upcoming events</a>
+        <div ngbDropdownMenu aria-labelledby="dropdownBasic1">
+          <button class="dropdown-item">WC1 Thanksgiving fun</button>
+          <button class="dropdown-item">Commons @ Christmas</button>
+          <button class="dropdown-item">Fro "YO" for you</button>
+        </div>
+      </li> -->
 
       <li class="nav-item">
         <a class="nav-link" href="#" id="text-blue" href="#/charity">Charity </a> |
       </li>
 
-      <li class="nav-item">
-        <a class="nav-link" id="text-blue" href="#">Sign Out </a> |
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" id="text-blue" href="#"> </a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" id="text-blue" href="#"> </a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" id="text-blue" href="#"> </a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" id="text-blue" href="#"> </a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" id="text-blue" href="#"> </a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" id="text-blue" href="#"> </a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" id="text-blue" href="#"> </a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" id="text-blue" href="#"> </a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" id="text-blue" href="#"> </a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" id="text-blue" href="#"> </a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" id="text-blue" href="#"> </a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" id="text-blue" href="#"> </a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" id="text-blue" href="#"> </a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" id="text-blue" href="#"> </a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" id="text-blue" href="#"> </a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" id="text-blue" href="#"> </a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" id="text-blue" href="#"> </a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" id="text-blue" href="#"> </a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" id="text-blue" href="#"> </a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" id="text-blue" href="#"> </a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" id="text-blue" href="#"> </a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" id="text-blue" href="#"> </a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" id="text-blue" href="#"> </a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" id="text-blue" href="#"> </a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" id="text-blue" href="#"> </a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" id="text-blue" href="#"> </a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" id="text-blue" href="#"> </a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" id="text-blue" href="#"> </a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" id="text-blue" href="#"> </a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" id="text-blue" href="#"> </a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" id="text-blue" href="#"> </a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" id="text-blue" href="#"> </a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" id="text-blue" href="#"> </a>
-      </li>
+      
 
-      <li class="nav-item">
-        <a class="nav-link" href="#" id="text-blue" href="#/about">Dev-Team </a>
-      </li>
+    <li class="nav-item">
+      <a class="nav-link" href="#" id="text-blue" href="#/about">About Capeat  </a> |
+    </li>
 
+    <li class="nav-item">
+      <a class="nav-link" id="text-blue" href="#">Signout </a> 
+    </li>
+  </ul>
+  
 
-    </ul>
-
-
-  </div>
+</div>
 
 </nav>
