--- a/CapEAT/UI_CapEat/src/app/special/special.component.html
+++ b/CapEAT/UI_CapEat/src/app/special/special.component.html
@@ -1,14 +1,15 @@
-<html>
-<body>
-    <div class="container-fluid">
 
+<html>
+
+    <body>
+    <div class="container-fluid">
+            <div class="main-menu-pages">
         <h1 class="calendarHeader">Monthly Specials</h1>
 
         <h3 class="calendarSubheader">Check out the calendar below to see what we have going on! </h3>
-
+</div>
         <iframe src="https://calendar.google.com/calendar/embed?src=46mmmls06mv47mj703hrjgbk40%40group.calendar.google.com&ctz=Europe%2FLondon"
-            style="border: 0" class="calendar" width="900" height="475" frameborder="3" scrolling="yes"></iframe>
-
+            style="border: 0" class="calendar" width="900" height="550" frameborder="0" scrolling="no"></iframe>
     </div>
 </body>
 </html>
