adding ui changes

--- a/CapEAT/UI_CapEat/src/app/map/map.component.html
+++ b/CapEAT/UI_CapEat/src/app/map/map.component.html
@@ -20,8 +20,8 @@
                         </div>
         
                         <li ngbDropdown class="d-inline-block">
-                                <a class="nav-lin" class="nav-link " class="btn btn-primary" id="dropdownBasic1" ngbDropdownToggle>
-                                        <strong>Select A Cafeteria</strong>
+                                <a class="nav-link" class="btn btn-primary" id="dropdownBasic1" ngbDropdownToggle>
+                                        Select A Cafeteria
                                 </a>
                                 <div ngbDropdownMenu aria-labelledby="dropdownBasic1" id="dropdownContent">
                                         <li role="menuitem">
