--- a/CapEAT/UI_CapEat/src/app/charity/charity.component.html
+++ b/CapEAT/UI_CapEat/src/app/charity/charity.component.html
@@ -34,10 +34,10 @@
             donate products for distribution.</h5>
         <br>
         <br>
-        <a class="btn btn-primary btn-sm" href="https://secure3.convio.net/feed/site/Donation2?df_id=4121&mfc_pref=T&4121.donation=form1"
+        <a class="btn btn-info btn-sm" href="https://secure3.convio.net/feed/site/Donation2?df_id=4121&mfc_pref=T&4121.donation=form1"
             role="button">Donate</a>
 
-        <a class="btn btn-primary btn-sm" href="https://feedmore.org/" role="button">More info</a>
+        <a class="btn btn-info btn-sm" href="https://feedmore.org/" role="button">More info</a>
 
 
         <br>
