--- a/CapEAT/UI_CapEat/src/app/history/history.component.html
+++ b/CapEAT/UI_CapEat/src/app/history/history.component.html
@@ -45,7 +45,7 @@
                             <p>{{ order.itemDesc }}</td>
                         <td>{{ order.itemPrice | currency:'USD':true:'1.2-2'}}</td>
                         <td>{{order.orderDate}}
-                            <td><button type="button" class="btn btn-primary" (click)="addItemToCart(order)">Add To Cart</button></td>
+                            <td><button type="button" class="btn btn-info btn-primary" (click)="addItemToCart(order)">Add To Cart</button></td>
                     </tr>
                 </tbody>
             </table>
