--- a/CapEAT/UI_CapEat/src/app/payment/paymentone.component.html
+++ b/CapEAT/UI_CapEat/src/app/payment/paymentone.component.html
@@ -2,9 +2,10 @@
         <div class="row">
             <div class="col-12 col-sm-8 col-md-6 col-lg-4 mx-auto">
                 <div id="pay-invoice" class="card">
-                    <div class="card-body">
+                    <div class="card-body payment-form">
+                            <div class="main-menu-pages"></div>
                         <div class="card-title">
-                            <h3 class="text-center">Pay Invoice</h3>
+                            <h3 class="text-center">Payment Details </h3>
                         </div>
                         <hr>
                         <form action="" method="post" novalidate="novalidate">
