--- a/CapEAT/UI_CapEat/src/app/thankyou/thankyou.component.html
+++ b/CapEAT/UI_CapEat/src/app/thankyou/thankyou.component.html
@@ -16,9 +16,9 @@
       <h4 class="subheader" id="emailHeader">Not a CapitalOne creditcard holder? Apply for a credit card now to reveal a special deal!</h4>
       <br>
 
-    <a class="btn btn-primary btn-sm" href="https://findmycard.capitalone.com/en/PageVersions/LandingPages/LP_ONE_V01.aspx" role="button">See If You're Pre-Qualified</a>
-    <button (click)="showDialog = !showDialog" class="btn btn-primary btn-sm">Apply for Capitalone Card</button>
-    <a class="btn btn-primary btn-sm" href="https://www.capitalone.com/credit-cards/compare/" role="button">Compare Credit Cards</a>
+    <a class="btn btn-info btn-sm" href="https://findmycard.capitalone.com/en/PageVersions/LandingPages/LP_ONE_V01.aspx" role="button">See If You're Pre-Qualified</a>
+    <button (click)="showDialog = !showDialog" class="btn btn-info btn-sm">Apply for Capitalone Card</button>
+    <a class="btn btn-info btn-sm" href="https://www.capitalone.com/credit-cards/compare/" role="button">Compare Credit Cards</a>
 
 
     <div align="center" style="border:1px">
@@ -55,7 +55,7 @@
                   <p>
                     Please use the below link to apply for CapitalOne Card
                   </p>
-                  <div class="btn btn-primary btn-sm">
+                  <div class="btn btn-info btn-sm">
                     <a href="https://findmycard.capitalone.com/en/PageVersions/LandingPages/LP_ONE_V01.aspx?external_id=WWW_WD928_ZZZ_ONL-SE_ZZZGO_T_SEM2_ZZZZ_c_Zg_94d47ec3-4022-4230-8064-ca30c1cd5415_149860674647_35598"
                       title="Title Link">
                       <font color="white"> Apply Now</font>
