--- a/CapEAT/UI_CapEat/src/app/Menu/breakfast.component.html
+++ b/CapEAT/UI_CapEat/src/app/Menu/breakfast.component.html
@@ -19,7 +19,7 @@
                 <thead>
                     <tr>
                         <th>
-                            <button class='btn btn-primary'
+                            <button class='btn btn-info btn-primary'
                                 (click)='toggleImage()'>
                                 {{showImage ? 'Hide' : 'Show'}} Image
                             </button>
@@ -42,8 +42,7 @@
                         <p>{{ product.description }}</td>
                         <td>{{ product.price | currency:'USD':true:'1.2-2'}}</td>
                         <td>
-                                <a (click)='paynow(i)' class="btn btn-success btn-block">Pay Now
-                                    <i class="fa fa-angle-right"></i>
+                                <a (click)='paynow(i)' style = "color: white;" class="btn btn-info">Pay Now
                                 </a>
                                 </td>
                     </tr>
