--- a/CapEAT/UI_CapEat/src/app/Menu/lunch.component.html
+++ b/CapEAT/UI_CapEat/src/app/Menu/lunch.component.html
@@ -22,7 +22,7 @@
                     <thead>
                         <tr>
                             <th>
-                                <button class='btn btn-primary'
+                                <button class='btn btn-info btn-primary'
                                     (click)='toggleImage()'>
                                     {{showImage ? 'Hide' : 'Show'}} Image
                                 </button>
@@ -45,8 +45,7 @@
                             <p>{{ product.description }}</td>
                             <td>{{ product.price | currency:'USD':true:'1.2-2'}}</td>
                             <td>
-                                    <a (click)='paynow(i)' class="btn btn-success btn-block">Pay Now
-                                        <i class="fa fa-angle-right"></i>
+                                    <a (click)='paynow(i)' style = "color: white;" class="btn btn-info">Pay Now
                                     </a>
                                     </td>
                         </tr>
