--- a/CapEAT/UI_CapEat/src/app/payment/payment.component.html
+++ b/CapEAT/UI_CapEat/src/app/payment/payment.component.html
@@ -14,7 +14,7 @@
                 <div id="pay-invoice" class="card">
                     <div class="card-body payment-form">
                         <div class="card-title">
-                            <h3 class="text-center">Pay</h3>
+                            <h3 class="text-center">Payment Details</h3>
                         </div>
                         <hr>
                         <form action="" method="post" novalidate="novalidate">
@@ -39,7 +39,7 @@
                                 <input id="cc-pament" name="cc-payment" type="text" [value]="total" readonly class="form-control" aria-required="true" aria-invalid="false"
                                     value="100.00">
                             </div>
-                            <div class="form-group has-success">
+                            <div class="form-group">
                                 <label for="cc-name" class="control-label mb-1">Name on card</label>
                                 <input id="cc-name" name="cc-name" [(ngModel)]="name" type="text" class="form-control cc-name valid" data-val="true" data-val-required="Please enter the name on card"
                                     autocomplete="cc-name" aria-required="true" aria-invalid="false" aria-describedby="cc-name-error">
@@ -109,7 +109,7 @@
                 <div id="pay-invoice" class="card">
                     <div class="card-body payment-form">
                         <div class="card-title ">
-                            <h3 class="text-center">Pay</h3>
+                            <h3 class="text-center">Payment Details</h3>
                         </div>
                         <hr>
                         <form action="" method="post" novalidate="novalidate">
