--- a/CapEAT/UI_CapEat/src/app/payment/paymentone.component.html
+++ b/CapEAT/UI_CapEat/src/app/payment/paymentone.component.html
@@ -7,7 +7,7 @@
                             <h3 class="text-center">Pay Invoice</h3>
                         </div>
                         <hr>
-                        <form action="" method="post" novalidate="novalidate">
+                        <form #myForm="ngForm" action="" method="post" novalidate="novalidate">
                             <div class="form-group text-center">
                                 <ul class="list-inline">
                                     <li class="list-inline-item">
@@ -26,19 +26,19 @@
                             </div>
                             <div class="form-group" >
                                 <label for="cc-payment" class="control-label mb-1">Payment amount</label>
-                                <input id="cc-pament" name="cc-payment" type="text" [value]="total" readonly class="form-control" aria-required="true" aria-invalid="false" value="100.00">
+                                <input id="cc-pament" name="cc-payment" type="text" [value]="total" readonly class="form-control" aria-required="true" aria-invalid="false" value="100.00" required>
                             </div>
                             <div class="form-group has-success">
                                 <label for="cc-name" class="control-label mb-1">Name on card</label>
                                 <input id="cc-name" name="cc-name" [(ngModel)]="name" type="text" class="form-control cc-name valid" data-val="true" data-val-required="Please enter the name on card"
-                                    autocomplete="cc-name" aria-required="true" aria-invalid="false" aria-describedby="cc-name-error">
+                                    autocomplete="cc-name" aria-required="true" aria-invalid="false" aria-describedby="cc-name-error" required>
                                 <span class="help-block field-validation-valid" data-valmsg-for="cc-name" data-valmsg-replace="true"></span>
                             </div>
                             <div class="form-group">
                                 <label for="cc-number" class="control-label mb-1">Card number</label>
                                 <input id="cc-number" name="cc-number" type="tel" [(ngModel)]="cardnum" class="form-control cc-number" value="" data-val="true"
                                     data-val-required="Please enter the card number" data-val-cc-number="Please enter a valid card number"
-                                    autocomplete="cc-number">
+                                    autocomplete="cc-number" required>
                                 <h6>
                                     <font  color='Green'>Use Capital One Card and get 1.5% cash back </font>
                                 </h6>
@@ -48,7 +48,7 @@
                                 <div class="col-6">
                                     <div class="form-group">
                                         <label for="cc-exp" class="control-label mb-1">Expiration</label>
-                                        <input id="cc-exp" name="cc-exp" type="tel" [(ngModel)]="exp" class="form-control cc-exp" value="" data-val="true" data-val-required="Please enter the card expiration"
+                                        <input id="cc-exp" required name="cc-exp" type="tel" [(ngModel)]="exp" class="form-control cc-exp" value="" data-val="true" data-val-required="Please enter the card expiration"
                                             data-val-cc-exp="Please enter a valid month and year" placeholder="MM / YY" autocomplete="cc-exp">
                                         <span class="help-block" data-valmsg-for="cc-exp" data-valmsg-replace="true"></span>
                                     </div>
@@ -57,20 +57,20 @@
                                     <label for="x_card_code" class="control-label mb-1">Security code</label>
                                     <div class="input-group">
                                         <input id="x_card_code" name="x_card_code" [(ngModel)]="seccode" type="tel" class="form-control cc-cvc" value="" data-val="true" data-val-required="Please enter the security code"
-                                            data-val-cc-cvc="Please enter a valid security code" autocomplete="off">
+                                            data-val-cc-cvc="Please enter a valid security code" autocomplete="off" required>
                                 </div>
                                 </div>
                             </div>
                             <div class="form-group">
                                 <label for="x_zip" class="control-label mb-1">Zip code</label>
                                 <input id="x_zip" name="x_zip" type="text" [(ngModel)]="postalcode" class="form-control" value="" data-val="true" data-val-required="Please enter the ZIP/Postal code"
-                                    autocomplete="postal-code">
+                                    autocomplete="postal-code" required>
                                 <span class="help-block" data-valmsg-for="x_zip" data-valmsg-replace="true"></span>
                             </div>
 
 
-                            <form action="#" onsubmit="if(document.getElementById('agree').required= true; } else { alert('Please indicate that you have read and agree to the Terms and Conditions and Privacy Policy'); return false; }">
-                                <input type="checkbox" name="checkbox" value="check" id="agree" /> I have read and agree to the Terms and Conditions.
+                            <form  action="#" onsubmit="if(document.getElementById('agree').required= true; } else { alert('Please indicate that you have read and agree to the Terms and Conditions and Privacy Policy'); return false; }">
+                                <input type="checkbox" checked name="checkbox" value="check" id="agree" /> I have read and agree to the <a href="https://www.capitalone.com/legal/terms-conditions/">Terms and Conditions.</a>
                                 <br>
                                 <input type="checkbox" name="checkbox" [(ngModel)]="savecard" value="check" id="save" /> Please save my card information for future use.
                                 <br>
@@ -79,9 +79,9 @@
                             <div>
 
 
-                                <a [routerLink]="['/thankyou']" (click)='fetch()' class="btn btn-lg btn-info btn-block">Pay
-                                    <i class="fa fa-lock fa-lg"></i>&nbsp;
-                                </a>
+                                    <input type="button" value ="Pay" [routerLink]="['/thankyou']" (click)='fetch()' [disabled]="!myForm.form.valid" class="btn btn-lg btn-info btn-block" >
+                                 &nbsp;
+                              
                             </div>
                         </form>
                     </div>
